# smpleOS

./: .gitignore  README.md
aeroforge-x/: .gitignore  .pre-commit-config.yaml  DELIVERY_CHECKLIST.md  Makefile  RELEASE-NOTES-v0.2.0.md  RELEASE_NOTES.md  alembic.ini  pyproject.toml
aeroforge-x/.github/workflows/: ci.yml
aeroforge-x/deploy/: .env.example  .env.v61.example  docker-compose.ev3.yml  docker-compose.ev4.yml  docker-compose.ev45.yml  docker-compose.v61.yml  docker-compose.yml  init-db.sql  kong.yml  migration_report.md
aeroforge-x/deploy/helm/aeroforge-x/: Chart.yaml  values.yaml
aeroforge-x/deploy/migrations/neo4j/: init_kg_schema.cypher
aeroforge-x/deploy/scripts/: backup.sh  dr-failover.sh  init_minio_buckets.sh  init_nats_streams.sh  init_neo4j_schema.sh  run_migrations.sh  smoke_test.py  test_e2e_link.py
aeroforge-x/deploy/terraform/: main.tf  variables.tf
aeroforge-x/docs/: B5-105_Version_Domain_Model_Specification.md  B5-106_Read_Path_Unification_Design.md  deployment.md  ev4.5-digital-thread-tasks.md  ev4.5-tasks.md  ev4.6-digital-thread-hardening-tasks.md  operations.md  release-notes-v1.0.0.md  tasks.md
aeroforge-x/docs/specs/: ev4.5-architecture-activation-design.md  ev4.5-architecture-activation-spec.md  ev4.5-digital-thread-design.md  ev4.5-digital-thread-spec.md  ev4.6-digital-thread-hardening-design.md  ev4.6-digital-thread-hardening-spec.md
aeroforge-x/electron/: package.json
aeroforge-x/electron/src/: ipc-handlers.ts  main.ts  menu.ts  preload.ts  types.ts
aeroforge-x/frontend/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
aeroforge-x/frontend/public/: manifest.json  sw.js
aeroforge-x/frontend/src/: App.tsx  main.tsx
aeroforge-x/libs/aeroforge-cae-core/: pyproject.toml
aeroforge-x/libs/aeroforge-common/: pyproject.toml
aeroforge-x/libs/aeroforge-db/: pyproject.toml
aeroforge-x/scripts/: batch_add_repo.ps1  benchmark.py  db-migrate.sh  fix_duplicate_init.ps1  init-minio-phase2.py  init-minio-phase3.py  init-minio.py  init_minio_buckets.sh  init_nats_streams.py  init_neo4j_schema.py  neo4j-init-phase2.cypher  neo4j-init-phase3.cypher  neo4j-init.cypher  seed-data.py  setup-dev.sh
aeroforge-x/services/aircraft-core-service/: Dockerfile  requirements.txt
aeroforge-x/services/design-center/: pyproject.toml
aeroforge-x/services/physics-twin-service/: Dockerfile  pyproject.toml  requirements.txt
aeroforge-x/services/workflow-engine-service/: Dockerfile  requirements.txt
aeroforge-x/tests/: test_e2e.py  test_e2e_phase2.py  test_performance.py  test_uat.py  test_uat_phase2.py
aeroforge-x/tests/e2e/: test_e2e.py  test_phase3_e2e.py  test_phase4_e2e.py  test_v2_e2e.py  test_v3_e2e.py
aeroforge-x/tests/integration/: conftest.py  test_cert_evidence_lifecycle.py  test_config_baseline_lifecycle.py  test_config_cert_interaction.py  test_config_three_view_e2e.py  test_cross_program_events.py  test_factory_car_interaction.py  test_gdt_digital_thread.py  test_material_traceability_e2e.py  test_production_monitoring_flow.py  test_shop_floor_data_flow.py  test_supplier_cert_interaction.py  test_supplier_quality_lifecycle.py  test_uq_mdo_integration.py
aeroforge-x/tests/performance/: test_api_response_perf.py  test_bom_propagation_perf.py  test_dfx_perf_benchmarks.py  test_fleet_fracas_perf.py  test_kpi_verification.py  test_performance_security.py  test_phase3_performance.py  test_phase4_performance.py
aeroforge-x/tests/security/: test_phase3_security.py  test_phase4_security.py
aeroforge-x/tests/uat/: test_phase3_uat.py  test_phase4_uat.py
(+1006 files in other folders)
