[tool.poetry]
name = "aeroforge-x"
version = "0.1.0"
description = "Aircraft Design-to-Manufacturing Operating System"
authors = ["AeroForge-X Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
neo4j = "^5.26.0"
minio = "^7.2.12"
celery = {extras = ["redis"], version = "^5.4.0"}
nats-py = "^2.9.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
python-keycloak = "^5.3.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
httpx = "^0.28.0"
redis = "^5.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
testcontainers = "^4.8.0"
ruff = "^0.8.0"
mypy = "^1.13.0"
pre-commit = "^4.0.0"
httpx = "^0.28.0"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["libs", "services"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["aeroforge_common", "aeroforge_db"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "neo4j.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "minio.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "nats.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["libs", "services"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"