[tool.poetry]
name = "aeroforge-design-center"
version = "0.1.0"
description = "AeroForge-X Design Center Service"
authors = ["AeroForge-X Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"